# gitsup

./: .gitattributes  .gitignore  .travis.yml  LICENSE  README.md  requirements.in  requirements.txt  setup.cfg  setup.py
.github/workflows/: publish.yml  test.yml
gitsup/: __init__.py  _version.py  config.py  main.py  update.py  updater.py
tests/: test_config.py  test_updater.py
