[metadata]
name = gitsup
author = Thomas Gamauf
author_email = thomas.gamauf@gmail.com
url = https://github.com/tgamauf/gitsup
description = Git submodule updater
long_description = file: README.md
license = MIT
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Software Development
    Topic :: Software Development :: Version Control
    Topic :: Software Development :: Version Control :: Git
    Topic :: System :: Software Distribution

[options]
zip_safe = True
packages = find:
python_requires = >=3.6
install_requires=
    PyYAML
    requests

[options.packages.find]
exclude =
    tests

[options.entry_points]
console_scripts =
    gitsup = gitsup.main:main

[options.extras_require]
dev =
    black
    pre-commit
    pip-tools
    pytest
    requests-mock

[versioneer]
VCS = git
style = pep440
versionfile_source = gitsup/_version.py
versionfile_build = gitsup/_version.py
tag_prefix =
parentdir_prefix = gitsup-

